fixes letter spacing

--- a/less/index.less
+++ b/less/index.less
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
-    letter-spacing: .5;
+    letter-spacing: 2px;
 }
 
 blockquote, q {
@@ -66,7 +66,7 @@ button {
 
     h1 {
         font-family: 'Bad Script', cursive;
-        letter-spacing: 10;
+        letter-spacing: 10px;
         color: #ffffb0;
         margin-left: 5%;
         font-size: 2.2rem;
@@ -330,7 +330,7 @@ button {
 
     h1 {
         font-family: 'Bad Script', cursive;
-        letter-spacing: 10;
+        letter-spacing: 10px;
         color: #ffffb0;
         margin-right: 3%;
         font-size: 2rem;
